# PokemonSite

./: .gitignore  .travis.yml  Cargo.toml  Pokemon EM No Enc.lua  Pokemon Gen 3.lua  README.md  charmap.lua  download_api.py  download_images.py  game 1x6.html  game 2x3.html  game 3x2.html  game 6x1.html  game.html  generate.py  generateAPI.py  generate_api.py  include.lua  index.html  pkmn.rar  pokemon emerald no encryption.lua  pokemon.lua  pokemon.py  pokemonatual.js  pokemons.csv  requirements.txt  test.py  teste api.html
api/: 0.json  1  1.json  10  10.json  100  100.json  101.json  102  102.json  103.json  104.json  105.json  106.json  107.json  108  108.json  109  109.json  11.json  110  110.json  111.json  112  112.json  113.json  114  114.json  115.json  116.json  117  117.json  118.json  119  119.json  12.json  120.json  121  121.json  122.json  (+1977 more)
api/1/: index.json
api/10/: index.json
api/100/: index.json
api/101/: index.json
api/102/: index.json
api/103/: index.json
api/105/: index.json
api/109/: index.json
api/11/: index.json
api/110/: index.json
api/111/: index.json
api/112/: index.json
api/114/: index.json
api/116/: index.json
api/12/: index.json
api/121/: index.json
api/123/: index.json
api/125/: index.json
api/126/: index.json
api/129/: index.json
api/130/: index.json
api/131/: index.json
api/132/: index.json
css/: game.css  style.css
javascript/: game.js  javascript.js  pokemons.js  tipos.js
js/: app.js  current.js  game.js  include.js  local.js  pokemons.js  pokemonsgame.js  types.js
src/: main.rs
(+363 files in other folders)
