[package]
name = "download_images"
version = "0.1.0"
authors = ["igorfs10 <igorfs10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon-rs = { git = "https://github.com/silvia-odwyer/photon/" }
rayon = "1.5.0"
ureq = "2.0.2"
console = "0.14.1"

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3