[package]
name = "download_images"
version = "0.1.0"
authors = ["igorfs10 <igorfs10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon-rs = "0.3.1"
ureq = "2.1.1"
console = "0.14.1"
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.14"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1

[profile.dev]
lto = false
opt-level = 0
debug = true
codegen-units = 256
